Card button alignment fixed

--- a/less/index.less
+++ b/less/index.less
@@ -13,6 +13,7 @@
 
 .jumbotron {
   background:@hint-of-yellow;
+  margin: 30px 0;
   .row {
     display: flex;
     justify-content: space-around;
@@ -24,7 +25,8 @@
 .btn {
   background: @sycamore;
   border-color: gray;
-
+  max-width: 60%;
+  align-self: center;
   &:hover {
     color: gray;
     background: @hint-of-yellow;
@@ -49,3 +51,16 @@ a {
  
 }
 
+.footer{
+  margin-top: 30px;
+}
+
+h4 {
+  margin-top: 40px;
+}
+
+.card-body{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
